# anachrjsonistic

./: CMakeLists.txt  README.md  build.hxml  json.h
.github/workflows/: ci.yml
json/: Json.cpp  Json.h  Json.hx  Main.hx  StdAfx.h  StdAfx.hx
tests/: test_json.cpp
